[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/asertijo1.gd" type="Script" id=1]
[ext_resource path="res://escenas/objetos/cuarto_externo_gde_largo.tscn" type="PackedScene" id=2]
[ext_resource path="res://escenas/objetos/antorcha_piedra.tscn" type="PackedScene" id=3]
[ext_resource path="res://escenas/objetos/boton.tscn" type="PackedScene" id=4]
[ext_resource path="res://escenas/objetos/caja.tscn" type="PackedScene" id=5]

[node name="asertijo1" type="Node2D"]
script = ExtResource( 1 )

[node name="cuarto_gde_largo" parent="." instance=ExtResource( 2 )]
position = Vector2( -0.422569, -0.0654335 )

[node name="antorcha_piedraTL" parent="." instance=ExtResource( 3 )]
position = Vector2( 69.9284, 85.4109 )
estado = "apagada"

[node name="botonTL" parent="." instance=ExtResource( 4 )]
position = Vector2( 58.5205, 75.9346 )
scale = Vector2( 0.7, 0.7 )

[node name="antorcha_piedraTR" parent="." instance=ExtResource( 3 )]
position = Vector2( 106.428, 85.4109 )
estado = "apagada"

[node name="botonTR" parent="." instance=ExtResource( 4 )]
position = Vector2( 117.704, 75.9346 )
scale = Vector2( 0.7, 0.7 )

[node name="antorcha_piedraBL" parent="." instance=ExtResource( 3 )]
position = Vector2( 69.9284, 121.46 )

[node name="botonBL" parent="." instance=ExtResource( 4 )]
position = Vector2( 58.5205, 130.997 )
scale = Vector2( 0.7, 0.7 )

[node name="antorcha_piedraBR" parent="." instance=ExtResource( 3 )]
position = Vector2( 106.352, 121.46 )
estado = "apagada"

[node name="botonBR" parent="." instance=ExtResource( 4 )]
position = Vector2( 117.704, 130.997 )
scale = Vector2( 0.7, 0.7 )

[node name="cajaBL" parent="." instance=ExtResource( 5 )]
position = Vector2( 48.6169, 130.997 )

[node name="cajaBR" parent="." instance=ExtResource( 5 )]
position = Vector2( 133.534, 130.997 )

[node name="cajaTL" parent="." instance=ExtResource( 5 )]
position = Vector2( 58.5205, 75.9346 )

[node name="cajaTR" parent="." instance=ExtResource( 5 )]
position = Vector2( 117.704, 75.9346 )

[node name="botonReset" parent="." instance=ExtResource( 4 )]
position = Vector2( 142.697, 57.7415 )
scale = Vector2( 0.7, 0.7 )
